--- a/src/app/page/task/task.component.html
+++ b/src/app/page/task/task.component.html
@@ -1,1 +1,62 @@
-<p>task works!</p>
+<div *ngIf="loading">
+  <app-loading></app-loading>
+</div>
+
+<div class="task-board-container">
+  <h1 class="task-board-heading">Tasks</h1>
+  <!-- Button trigger modal -->
+  <div class="d-flex justify-content-center">
+    <button mat-button class="add-board-button mat-raised-button mat-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      Add Task
+    </button>
+  </div>
+
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Add Task</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <mat-dialog-content>
+            <mat-label>Task</mat-label>
+            <form [formGroup]="taskForm" (ngSubmit)="onAddTask()">
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-label>Title</mat-label>
+                <input matInput formControlName="title" type="text" placeholder="Title">
+                <mat-error *ngIf="taskForm.get('title')?.invalid && taskForm.get('title')?.touched">
+                  Title is required.
+                </mat-error>
+              </mat-form-field>
+
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-label>Description</mat-label>
+                <textarea matInput formControlName="description" placeholder="Description"></textarea>
+                 <mat-error *ngIf="taskForm.get('title')?.invalid && taskForm.get('title')?.touched">
+                  Description is required.
+                </mat-error>
+              </mat-form-field>
+
+            </form>
+          </mat-dialog-content>
+        </div>
+        <div class="modal-footer">
+          <button mat-button data-bs-dismiss="modal">Cancel</button>
+          <button mat-raised-button color="primary" type="submit" (click)="onAddTask()">
+            Add Task
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="board-list" >
+    <div class="board" *ngFor="let board of boards" [cdkDropListData]="board.tasks" cdkDropList>
+      <h3>{{ board.title }}</h3>
+      <div *ngFor="let task of board.tasks" cdkDrag class="task">
+        {{ task.title }}
+      </div>
+    </div>
+  </div>
+</div>
