--- a/src/app/page/task-boards/task-boards.component.html
+++ b/src/app/page/task-boards/task-boards.component.html
@@ -4,6 +4,7 @@
 
 <div *ngIf="!loading" class="task-board-container">
   <h1 class="task-board-heading">Task Boards</h1>
+  
   <div class="d-flex justify-content-center">
     <button mat-button class="add-board-button mat-raised-button mat-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
       Add Board
@@ -18,31 +19,27 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <mat-dialog-content>
-            <mat-label>Board</mat-label>
-            <form [formGroup]="boardForm" (ngSubmit)="onAddBoard()">
-              <mat-form-field appearance="fill" class="w-100">
-                <mat-label>Title</mat-label>
-                <input matInput formControlName="title" type="text" placeholder="Title">
-                <mat-error *ngIf="boardForm.get('title')?.invalid && boardForm.get('title')?.touched">
-                  Title is required.
-                </mat-error>
-              </mat-form-field>
-            </form>
-          </mat-dialog-content>
-        </div>
-        <div class="modal-footer">
-          <button mat-button data-bs-dismiss="modal">Cancel</button>
-          <button mat-raised-button color="primary" type="submit" (click)="onAddBoard()">
-            Add Board
-          </button>
+          <form [formGroup]="boardForm" (ngSubmit)="onAddBoard()">
+            <mat-form-field appearance="fill" class="w-100">
+              <mat-label>Title</mat-label>
+              <input matInput formControlName="title" placeholder="Board Title">
+              <mat-error *ngIf="boardForm.get('title')?.invalid && boardForm.get('title')?.touched">
+                Title is required.
+              </mat-error>
+            </mat-form-field>
+            <button mat-button type="submit">Add Board</button>
+          </form>
         </div>
       </div>
     </div>
-  </div>
+  </div>  
 
-  <div class="board-list" cdkDropList (cdkDropListDropped)="onDrop($event)">
-    <div class="board" *ngFor="let board of boards" [cdkDropListData]="board.tasks" cdkDropList (cdkDropListDropped)="onDrop($event)">
+  <div class="board-list">
+    <div class="board" *ngFor="let board of boards" 
+         [cdkDropListData]="board.tasks" 
+         cdkDropList 
+         [id]="board._id!" 
+         (cdkDropListDropped)="onDrop($event)">
       
       <button class="btn text-danger" (click)="deleteBoard(board._id)">
         <mat-icon>delete</mat-icon>
@@ -52,12 +49,9 @@
         <h3>{{ board.title }}</h3>
       </button>
       
-      <div *ngFor="let task of board.tasks" cdkDrag class="task" (cdkDragMoved)="onDragMoved($event)">
+      <div *ngFor="let task of board.tasks" cdkDrag class="task">
         {{ task.title }}
       </div>
-      
     </div>
   </div>
-  
-  
 </div>
